--- a/index.html
+++ b/index.html
@@ -3,21 +3,98 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>My Portfolio</title>
+  <title>My PhD Portfolio</title>
   <meta name="robots" content="noindex" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 20px;
+      line-height: 1.6;
+      background: #f9f9f9;
+      color: #333;
+    }
+    h1, h2 {
+      color: #007acc;
+    }
+    section {
+      margin-bottom: 40px;
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    ul {
+      list-style-type: disc;
+      margin-left: 20px;
+    }
+    a {
+      color: #007acc;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
   <script>
     function checkPassword() {
       const password = prompt("Enter password to access:");
-      if (password !== "pass2390") {
+      if (password !== "yourPassword") {
         alert("Wrong password! Redirecting...");
-        window.location = "https://google.com"; // Redirect if wrong
+        window.location = "https://google.com"; // Redirect on fail
       }
     }
   </script>
 </head>
 <body onload="checkPassword()">
-  <h1>Welcome to My Portfolio</h1>
-  <p>This is my private portfolio. Only people with the password can see this.</p>
-  <!-- Add your portfolio content here -->
+  <h1>My PhD Portfolio</h1>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>Hi! I'm [Your Name], a passionate researcher with a background in [Your Field]. My research interests include [Your Interests]. I am applying for a PhD program to deepen my expertise and contribute to [specific area or goal].</p>
+  </section>
+
+  <section id="skills">
+    <h2>Skills</h2>
+    <ul>
+      <li>Programming: Python, R, MATLAB</li>
+      <li>Data Analysis & Visualization</li>
+      <li>Machine Learning & Statistical Modeling</li>
+      <li>Academic Writing and Communication</li>
+      <!-- Add or modify as needed -->
+    </ul>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <ul>
+      <li>
+        <strong>Project Title 1</strong>: Description of your project, methodology, and outcomes.  
+        <a href="https://github.com/yourusername/project1" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
+      </li>
+      <li>
+        <strong>Project Title 2</strong>: Brief description, tools used, results.  
+        <a href="https://github.com/yourusername/project2" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
+      </li>
+      <!-- Add more projects -->
+    </ul>
+  </section>
+
+  <section id="publications">
+    <h2>Publications</h2>
+    <ul>
+      <li><a href="[link to paper]" target="_blank" rel="noopener noreferrer">Title of Publication 1</a>, Journal/Conference, Year</li>
+      <li><a href="[link to paper]" target="_blank" rel="noopener noreferrer">Title of Publication 2</a>, Journal/Conference, Year</li>
+      <!-- Add your publications here -->
+    </ul>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener noreferrer">linkedin.com/in/yourprofile</a></p>
+  </section>
 </body>
 </html>
+
