--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <script>
     function checkPassword() {
       const password = prompt("Enter password to access:");
-      if (password !== "yourPassword") {
+      if (password !== "pass123") {
         alert("Wrong password! Redirecting...");
         window.location = "https://google.com"; // Redirect on fail
       }
